# simtrails

./: .buildinfo  CNAME  README.md  detectables.html  genindex.html  imagers.html  index.html  misc.html  objects.inv  py-modindex.html  pyproject.toml  radiative_transfer.html  searchindex.js  sensitivity_result.html
.doctrees/: cocip.doctree  detectables.doctree  detection_algorithms.doctree  detectors.doctree  environment.pickle  imagers.doctree  index.doctree  mannstein.doctree  misc.doctree  radiative_transfer.doctree  sensitivity_result.doctree
.doctrees/usage/: installation.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/simtrails/: contrail.html  forcing.html  sensitivity_test.html
_modules/simtrails/cocip/: data.html
_modules/simtrails/misc/: microphysics.html
_sources/: detectables.rst.txt  detectors.rst.txt  imagers.rst.txt  index.rst.txt  radiative_transfer.rst.txt
data/: pca_loadings.pq
docs/source/: conf.py  mannstein.rst  sensitivity_result.rst
scripts/: interpreting_sensitivity_results.py  simple_detections_vs_resolutions.py  simple_sensitivity_test.py  simulated_image.py
src/simtrails/: __init__.py  atmosphere.py  contrail.py  contrail_detector.py  detectable.py  detection_algorithms.py  forcing.py  generate_lookup.py  imager.py  lookup.py  mannstein.py  radiative_transfer.py  saved_sensitivities.py  sensitivity_result.py  sensitivity_test.py  validation.py
src/simtrails/cocip/: __init__.py  analysis.py  contrail_aggregation.py  data.py  observability_histograms.py  plotting.py
(+8 files in other folders)
